--- a/animate.css
+++ b/animate.css
@@ -105,32 +105,26 @@
   .ldio-jlr7wkz6w2 div {
     box-sizing: content-box;
   }
-
   .twitter-typeahead {
     width:100%;
   }
-
   .tt-menu {
     width:100%;
     border:1px solid #eee;
     border-top:none;
   }
-
   .tt-suggestion {
     padding:10px 5px;
     background:#fff;
     border-bottom:1px solid #eee;
     cursor:pointer;
   }
-
   .tt-cursor, .tt-suggestion:hover {
     background:#f5f5f5;
   }
-
   .twitter-typeahead {
     width:100%;
   }
-
   .tt-hint {
     opacity:.3 !important;
   }
@@ -141,7 +135,7 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: Sarabun;
 }
 table thead {
