--- a/animate.css
+++ b/animate.css
@@ -135,12 +135,12 @@
 * {
   padding: 0;
   margin: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   font-family: Sarabun;
 }
 table thead {
-  background: #33aab7;
-  color: white;
+  /* background: #33aab7;
+  color: white; */
   font-size: 16px;
 }
 table th, td {
@@ -158,18 +158,6 @@ table th, td {
   width: 100%;
   height: 100%;
   border: none;
-}
-.container {
-  padding: 30px 65px;
-  border-radius: 12px;
-  row-gap: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-:where(.container, form, .input-field, header) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 a {
