--- a/animate.css
+++ b/animate.css
@@ -131,41 +131,13 @@
 /* // animate */
 
 /* // style */
-@import url("https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); 
-* {
-  /* padding: 0;
-  margin: 0;
-  box-sizing: border-box; */
-  font-family: Sarabun;
-}
-table thead {
-  /* background: #33aab7;
-  color: white; */
-  font-size: 16px;
-}
-table th, td {
-  white-space: nowrap;
-}
-.responsive {
-  max-width: 100%;
-  height: auto;
-}
-.responsive-iframe {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
-a {
-  /* color: blue; */
-  text-decoration: none;
-}
-a:hover {
-  /* color: red; */
-  text-decoration: none;
-}
+  @import url("https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); 
+  * {font-family: Sarabun;}
+  table thead {font-size: 16px;}
+  table th, td {white-space: nowrap;}
+  .responsive {max-width: 100%; height: auto;}
+  .responsive-iframe {top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; border: none;}
+  @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
+  a {text-decoration: none;}
+  a:hover {text-decoration: none;}
 /* // style */
